--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <hr>
     </header>
 
-    <img src="" alt="Robotics Logo">
-
-
+<img src="robo-logo.png" alt="Image of the Robotics Logo">
+<h1 class="top-right">NEWS!</h1>
+    <p></p>
     
 
     <footer>
