--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <img src="robo-logo.png" alt="Image of the Robotics Logo">
 <h1 class="top-right">NEWS!</h1>
-    <p></p>
+    <p>Robotics is now taking place on<b> Wednesdays!</b></p>
     
 
     <footer>
