--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <img src="robo-logo.png" alt="Image of the Robotics Logo">
 <h1 class="top-right">NEWS!</h1>
-    <p>Robotics is now taking place on<b> Wednesdays!</b></p>
-    
+    <p>🔥Robotics is now taking place on<b> Wednesdays!</b></p>
+    <p> Fundraiser starting soon next week</p>
 
     <footer>
         <p>&copy; Precious Agyei</p>
