--- a/Info.html
+++ b/Info.html
@@ -27,6 +27,8 @@
 <h2>What we do</h2>
 <h2>Competitions</h2>
 <h2>Latest News</h2>
+<h2 id="Club_Officer_Address"> Club Officers</h2>
+
 
 
 </body>
