--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Precious Agyei"/>
+    <meta name="description" content="The Doherty Robotics Website is a place for 
+    students, staff, and as well as family members to further engage in club awareness
+    through its weekly news, past news, information about the club, latest updates
+    on each team's robots, club events such as fundraiser, our officer positions, and much more!"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robotics Website</title>
@@ -8,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Lato:ital,wght@0,100;1,300&display=swap" rel="stylesheet">
-
+<link rel="shortcut icon" type="image/x-icon" href="Doherty Logo no BG.png" />
 </head>
 <body>
     <header>
@@ -24,12 +29,15 @@
             </nav>
             <hr>
     </header>
+<p style="font-size: 26px; text-align:center; padding:40px; max-width:2500px; text-decoration:underline; background-repeat:no-repeat; background-image: url(robo-logo.png); background-size:500px; width:300px; height:150px; display: block; margin:0 auto;"> See our <a href="Info.html#Club_Officer_Address"> Club Officers here</a></p>
+&nbsp;
 
-<img src="robo-logo.png" alt="Image of the Robotics Logo">
-<h1 class="top-right">NEWS!</h1>
-    <p>🔥Robotics is now taking place on<b> Wednesdays!</b></p>
-    <p> Fundraiser starting soon next week</p>
-
+<div><h1 class="top-right">News!</h1>
+<h2 style="margin:auto; text-align: center;">*Updates weekly*</h2>
+    <p>🔥Robotics is now taking place on<strong> Wednesdays!</strong></p>
+    <p>-Fundraiser starting soon next week-</p>
+</div>
+<h2 style="background-color:rgb(179, 63, 63); padding:50px; text-align: center; font-size: 50px; text-decoration: double; font-family: Arial, Helvetica, sans-serif; border-style: solid 20px; border-color: orange; text-decoration:line-through; margin:0;">Past news</h2>
     <footer>
         <p>&copy; Precious Agyei</p>
     </footer>
