--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Robotics</h2>
         <nav>
             <ul>
-                <li class="changeco">Home</li>
+                <li style="background-color:rgb(98, 105, 104) ;"> <a href="index.html">Home</a></li>
                 <li> <a href="Info.html">Info  </a></li>
                 <li><a href="contact.html">Contact</a></li>
                 
