--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Club information</title>
+    <link rel="stylesheet" href="Info.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Lato:ital,wght@0,100;1,300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="Doherty Logo no BG.png" />
+    
 </head>
 <body>
     <header>
