--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <hr>
     </header>
-<p style="font-size: 26px; text-align:center; padding:40px; max-width:2500px; text-decoration:underline; background-repeat:no-repeat; background-image: url(robo-logo.png); background-size:500px; width:300px; height:150px; display: block; margin:0 auto;"> See our <a href="Info.html#Club_Officer_Address"> Club Officers here</a></p>
+<p style="font-size: 26px; text-align:center; padding:40px; max-width:320px; text-decoration:underline; background-repeat:no-repeat; background-image: url(robo-logo.png); background-size:500px; width:300px; height:150px; display: block; margin:0 auto;"> See our <a href="Info.html#Club_Officer_Address"> Club Officers here</a></p>
 &nbsp;
 
 <div><h1 class="top-right">News!</h1>
@@ -39,7 +39,7 @@
 </div>
 <h2 style="background-color:rgb(179, 63, 63); padding:50px; text-align: center; font-size: 50px; text-decoration: double; font-family: Arial, Helvetica, sans-serif; border-style: solid 20px; border-color: orange; text-decoration:line-through; margin:0;">Past news</h2>
     <footer>
-        <p>&copy; Precious Agyei</p>
+        <p style="font-size:14px; color:white;">&copy; Precious Agyei</p>
     </footer>
 </body>
 <script src="script.js"></script>
