will add instagram logo soon

--- a/Info.html
+++ b/Info.html
@@ -19,26 +19,39 @@
         <h2>Robotics</h2>
            <nav> <ul>
                 <li> <a href="index.html">Home</a></li>
-                <li class="changeco">Info</li>
-                <li><a href="contact.html">Contact</a><hr></li>
+                <li style="background-color:rgb(98, 105, 104);"><a href="Info.html">Info</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 
-             </ul>
+             </ul><hr>
         </nav>
-        <hr>
+      
     </header>
+  
 
-
-    <h2>When</h2>
+    <h2 class="centerh">When</h2>
     <p>Every <span>Tuesdays</span> and <span>Thursdays</span> <br>
     from <b>the end of school - 3:00PM</b></p>
 
-<h2>What we do</h2>
-<h2>Competitions</h2>
-<h2>Latest News</h2>
-<h2 id="Club_Officer_Address"> Club Officers</h2>
+<h2 class="centerh">What we do</h2>
+<p></p>
+<h2  class="centerh">Competitions</h2>
+<p></p>
+<h2  class="centerh">Latest News</h2>
+<p></p>
+<h2  class="centerh" id="Club_Officer_Address"> Club Officers</h2>
+<ul style=" background-color: rgb(207, 186, 186);  margin:auto;
+text-align: center;
+font-size:29px;
+padding:10px;">
+    <li>President: Stanley</li>
+    <li>Vice President: Brian Micheni</li>
+    <li>Secretary/Treasuer: Precious Agyei</li>
+    <li>Public Relations Officer: Jorgea Nico</li>
+   </ul>
 
-
-
+   <footer>
+    <p style="font-size:14px; color:white;">&copy; Precious Agyei</p>
+</footer>
 </body>
 </html>
 
