--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </nav>
         <hr>
     </header>
-
+<main></main>
     <footer>
         <p style="font-size:14px; color:white;">&copy; Precious Agyei</p>
     </footer>
