--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <div class="center">
             <h1 class="top-right">✨News!✨</h1>
-            <p><b>*Updates weekly*</b></p>
+            <p class="color"><b>*Updates weekly*</b></p>
             
             <p>🔥Robotics is now taking place on<strong> Wednesdays!</strong></p>
             <p>Ongoing Fundraiser!</p>
