--- a/Info.html
+++ b/Info.html
@@ -21,7 +21,7 @@
         <h1>Doherty Clubs</h1>
         <h2>Robotics</h2>
         <nav>
-            <ul>
+            <ul><!--links to each page of the entire website-->
                 <li> <a href="index.html">Home</a></li>
                 <li><a href="Info.html">Info</a></li>
                 <li><a href="contact.html">Contact</a></li>
