--- a/competitions.html
+++ b/competitions.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <div style="width: fit-content; display: block; margin: auto; font-size: 20px;">
+        <div style="width: 100vw; display: block; margin: auto; font-size: 20px;">
             <p>Competition area arrangement. </p>
             <img src="comp-area.jpg" alt="Battle area is surrounded by plastic walls">
             <p>Close up of what the battles look like.</p>
