--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
             <p>Ongoing Fundraiser!</p>
         </div>
         <div class="past-center">
-            <p>Past News</p>
+            <h2>Past News</h2>
             <p> ---</p>
             <p> ---</p>
             <p> ---</p>
             <p> ---</p>
 
         </div>
-        <div style="text-align: center; font-size: 20px; ">See our <a href="Info.html#Club_Officer_Address">Club
+        <div style="text-align: center; font-size: 28px; ">See our <a href="Info.html#Club_Officer_Address">Club
                 Officers here</a></div>
 
-            <div style="width: fit-content; display: block; margin: auto;"><img src="logo-no-color.jpg" alt="Doherty logo designed with robotic aesthetic but no coloring."></div>
+            <div style="width: 100%; display: block; margin: auto; background-color: white;"><img src="logo-no-color.jpg" alt="Doherty logo designed with robotic aesthetic but no coloring."></div>
 
     </main>
 
